# SearchEngine

./: CMakeLists.txt  README.md
HeaderFiles/: converterjson.h  invertedindex.h  searchengine.h  searchserver.h
SourceFiles/: CMakeLists.txt  converterjson.cpp  invertedindex.cpp  main.cpp  searchengine.cpp  searchserver.cpp
Tests/: CMakeLists.txt  indextests.cpp  servertests.cpp  tests.cpp
config/: answers.json  config.json
enc_temp_folder/dbb1acf8881f9874f3ec0861daa6f1/: converterjson.cpp
json/: config.json
resources/: file005.txt
src/: CMakeLists.txt  converterjson.cpp  converterjson.h  invertedindex.h  main.cpp  searchengine.cpp  searchengine.h  searchserver.cpp  searchserver.h
